--- a/training/intro.qmd
+++ b/training/intro.qmd
@@ -14,6 +14,115 @@ bibliography: references.bib
 
 # Introduction {.unnumbered}
 
+This book is presents a collection of approaches and examples that aim
+to facilitate the building of nimble *workflows* that follow in the
+principles of repeatability, reproducibility, reusability and
+transparency (**R^3^T**).
+
+The approaches presented here use **SpaDES** packages and associated
+packages, like `reproducible` and `Require`, that we (the authors) have
+developed to face a variety of issues that we experienced during our own
+journeys as modellers and, more generally, scientists.
+
+Many of these issues we faced because most of us were ecologists by
+training (not computer scientists, not engineers, etc.), who lacked a
+strong programming foundation. So, we expect many who have other
+backgrounds and maybe very strong programming skills to find this set of
+solutions foreign and perhaps unnecessary, limited, or over-complicated
+for many applications outside the realm of ecological sciences. We
+certainly don't expect NASA scientists to overhaul their own workflows
+and follow ours -- but feel free too and send us your feedback!
+
+Still, we hope that many ecologists and those in related sciences (e.g.
+forestry, wildlife management, etc.), academics or practitioners, can
+appreciate the value of transforming their work into R^3^T, nimble
+workflows and find these solution useful. Mostly we hope that ecological
+modellers can embrace these tools to work towards expanding the
+ecological modelling community and the reusability and testing of the
+models it produces.
+
+<!--Eliot please have a look above. I'm undecided whether much of the text should be moved to the preface. -->
+
+## Why SpaDES?
+
+SpaDES is a set of R packages that facilitate the process of
+implementing nimble *workflows* that follow in the principles of
+repeatability, reproducibility, reusability and transparency
+(**R^3^T**), via the creation and use of highly **modular** code that
+has **metadata** attached.
+
+### Modularity
+
+Modular code for ecological analyses has been long proposed
+[@reynolds1997]. Modularity means that scripts can be broken up into
+themes that bundled into meaningful chunks that can be easily moved,
+swapped, replaced or scrapped easily. A nice example of this is
+@barros2023 where a module was included or removed to identify the value
+of "adding more complexity". One simple conclusion followed Occam's
+Razor: simpler data and models predicted simpler characteristics of the
+forest than the complex data and models. In other words, adding
+complexity to a model made the model perform worse for some
+characteristics.
+
+### Metadata
+
+Metadata in a SpaDES context includes identifying what objects
+<!--Eliot, you has "data" but I wonder if people see data as something different and less general-->
+are **expected** by a chunk of code and what objects are **created** by
+a chunk of code: the **inputs** and **outputs**. This forces a user to
+understand their code and its linakges, and it allows R to know how to
+connect this chunk of code with others. Importantly, it allows SpaDES to
+chain or weave together modules such that the workflow structure can be
+defined from the bottom-up, rather than top-down.
+
+#### Aren't packages and functions sufficient?
+
+Scientists have embraced the idea of modular code by creating and using
+functions bundled into packages, e.g., R packages. This is analogous to
+the **Methods** section of a journal paper: i.e., the methods
+(functions) describe *how* you will do something. The use of packages in
+this way has massively accelerated Ecology and other data sciences.
+
+However, even if you know all the functions that a paper used, this in
+itself is not sufficient to reproduce the **Results**. *SpaDES modules
+can be thought of as the code needed to make the Results*. In other
+words, a SpaDES module enables a developer to bundle the actual code
+(the functions) needed to recreate all the steps to make the Results,
+such that the user can use it the module directly, rather than try to
+recreate the necessary sequence of functions.
+
+#### I use `targets` for my workflows. How does SpaDES differ?
+
+There are two major differences between `targets` and the SpaDES
+approach:
+
+-   **`targets` is "top-down", SpaDES is "bottom-up"** – with `targets`
+    the workflow is entirely defined by the script developer (as in
+    [Make](https://www.gnu.org/software/make/)). This is, they define
+    the both the connections and the *sequence* between each "target"
+    (the code sections that call functions and execute operations). In
+    SpaDES <!--Ceres TODO-->
+-   Both `targets` and SpaDES have caching mechanisms that can be used
+    (in SpaDES's case, at several levels – see @sec-caching on SpaDES
+    caching mechanisms).
+-   SpaDES has "embedded" metadata – or at least it makes the developer
+    think about it (SpaDES won't force metadata to be filled). Each
+    module is defined by not only declaring the inputs and outputs, but
+    also the inputs and outputs descriptions and types of object class,
+    the module's operating time scale, what packages and other modules
+    it might depend on, a description of what the module is intended
+    for, and much more. Some of the metadata is essential to chain
+    modules (the declaration of inputs and outputs), other isn't but can
+    greatly facilitate workflow setup (e.g. declaring package
+    dependencies), while other metadata are simply good to have (e.g. a
+    description of the module).
+
+### Nimbleness
+
+When combined with **modularity** we can weave together new Results that
+use *new data*, *updated data*, a *new module*, a *new study area*, a
+*new visualization*, address *new stakeholder's needs* and more.
+
 ## The three big problems in applied ecology
 
 Applied ecology -- the study of ecological systems that are affected by
@@ -69,51 +178,6 @@ approach will allow ecologists to get towards a PERFICT approach
 
 With this approach, we can better meet the expectations, and better
 address the problems.
-
-## SpaDES
-
-SpaDES is a set of R packages that facilitate the process creating and
-useing highly **modular** code that has **metadata** attached.
-
-### Modularity
-
-Modular code for ecological analyses has been long proposed
-[@reynolds1997]. Modularity means that scripts can be broken up into
-themes that bundled into meaningful chunks that can be easily moved,
-swapped, replaced or scrapped easily. A nice example of this is
-@barros2023 where a module was included or removed to identify the value
-of "adding more complexity". One simple conclusion followed Occam's
-Razor: simpler data and models predicted simpler characteristics of the
-forest than the complex data and models. In other words, adding
-complexity to a model made the model perform worse for some
-characteristics.
-
-### Metadata
-
-Metadata in a SpaDES context includes identifying what data are
-**expected** by a chunk of code and what data are **created** by a chunk
-of code: the **inputs** and **outputs**. This forces an ecologist to
-understand their code and it allows R to know how to connect this chunk
-of code with others. It allows SpaDES to chain or weave together
-modules.
-
-### Methods vs. Results
-
-Scientists have embraced the idea of modular code by creating and using
-functions bundled into packages, e.g., R packages. This is analogous to
-the **Methods** section: i.e., these describe how you will do something.
-The use of packages in this way has massively accelerated Ecology and
-other data sciences. However, even if you know all the functions that a
-paper used, it doesn't create the Results. *SpaDES modules can be
-thought of as the code needed to make the **Results**.* In other words,
-SpaDES enables us to bundle the actual code needed to recreate all the
-steps to make the Results.
-
-### Nimbleness
-
-When combined with **modularity** we can weave together new Results that
-use *new data*, *updated data*, a *new module*, a *new study area*, a
-*new visualization*, address *new stakeholder's needs* and more.
 
 ## Our challenge
 
