--- a/training/castorExample.qmd
+++ b/training/castorExample.qmd
@@ -32,7 +32,7 @@ knitr::knit_hooks$set(output = function(x, options) {
   hook_output(x, options)
 })
 
-options(repos = "http://cran.us.r-project.org")
+options(repos = list(CRAN = "http://cran.r-project.org"))
 
 if (Sys.getenv("USERNAME") == "GHA") {
   googledrive::drive_auth(path = Sys.getenv("GOOGLE_APP_CREDENTIALS"))
